--- a/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
@@ -10,9 +10,8 @@
                     mc:Ignorable="d" 
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-
-
     <Converter:BoolToScrollBarVisibility x:Key="boolToScrollVisibility"></Converter:BoolToScrollBarVisibility>
+    
     <Style x:Key="ChatBoxStyle" TargetType="{x:Type UserControl}">
         <Setter Property="Template">
             <Setter.Value>
@@ -39,7 +38,7 @@
                             </ItemsControl.Template>
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <dc:SmoothPanel TrackTopMost="false" VirtualizingPanel.VirtualizationMode="Recycling" VirtualizingPanel.CacheLength="5" VirtualizingPanel.CacheLengthUnit="Page" Margin="0,0,-2,0">
+                                    <dc:SmoothPanel TrackTopMost="true" VirtualizingPanel.CacheLength="15" VirtualizingPanel.CacheLengthUnit="Page" Margin="0,0,-2,0">
                                             <dc:SmoothPanel.Templates>
                                                 <dc:SmoothPanelTemplate ViewModel="{x:Type ubviewmodel:ChatMessageViewModel}" View="{x:Type ubview:ChatMessageView}" />
                                             </dc:SmoothPanel.Templates>
