--- a/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
@@ -16,7 +16,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type UserControl}">
-                    <Grid>              
+                    <Grid>
+                        <Rectangle Fill="#FF1E1E1E" Opacity="{Binding AppConfig.MessageBackgroundOpacity}"/>
                         <ItemsControl Focusable="False" ItemsSource="{Binding Messages}" Padding="0" Margin="0,0,-4,0">
                             <ItemsControl.Template>
                                 <ControlTemplate>
@@ -38,7 +39,7 @@
                             </ItemsControl.Template>
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <dc:SmoothPanel TrackTopMost="true" VirtualizingPanel.CacheLength="15" VirtualizingPanel.CacheLengthUnit="Page" Margin="0,0,-2,0">
+                                    <dc:SmoothPanel TrackTopMost="true" VirtualizingPanel.CacheLength="1" VirtualizingPanel.CacheLengthUnit="Page" Margin="0,0,-2,0">
                                             <dc:SmoothPanel.Templates>
                                                 <dc:SmoothPanelTemplate ViewModel="{x:Type ubviewmodel:ChatMessageViewModel}" View="{x:Type ubview:ChatMessageView}" />
                                             </dc:SmoothPanel.Templates>
