--- a/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
@@ -40,12 +40,12 @@
                     </ControlTemplate.Resources>
                     <Border Focusable="False" CornerRadius="10" Margin="1,0,1,5" BorderThickness="0,0,1,1" Padding="3,0,3,8">
                         <Border.Background>
-                            <LinearGradientBrush EndPoint="200,165.008" MappingMode="Absolute" StartPoint="80,0">
-                                <GradientStop Color="#FF4D4D4D" Offset="1"/>
-                                <GradientStop Color="#FF383838" Offset="0.123"/>
-                                <GradientStop Color="#FF515151" Offset="0.486"/>
-                                <GradientStop Color="#FF3C3C3C" Offset="0.843"/>
-                                <GradientStop Color="#FF424242" Offset="0.012"/>
+                            <LinearGradientBrush EndPoint="200,165.008" MappingMode="Absolute" StartPoint="80,0" Opacity="{Binding AppConfig.IndividualMessageBackgroundOpacity}">
+                                <GradientStop Color="#4D4D4D" Offset="1"/>
+                                <GradientStop Color="#383838" Offset="0.123"/>
+                                <GradientStop Color="#515151" Offset="0.486"/>
+                                <GradientStop Color="#3C3C3C" Offset="0.843"/>
+                                <GradientStop Color="#424242" Offset="0.012"/>
                             </LinearGradientBrush>
                         </Border.Background>
                         <Grid Margin="-1,0,-1,3">
@@ -78,10 +78,14 @@
 
                                 <TextBox Focusable="False" Text="{Binding Message.TimeStamp}" FontSize="10" Foreground="#FFD69B33" TextAlignment="Right" DockPanel.Dock="Right" Margin="0,1,0,0" FontWeight="Bold"/>
                             </DockPanel>
-                            <Border Focusable="False" Grid.ColumnSpan="2" Grid.Row="1" CornerRadius="10" Background="#FF303030" BorderThickness="0" Padding="2,1" Margin="0,0,0,-9">
+                            <Border Focusable="False" Grid.ColumnSpan="2" Grid.Row="1" CornerRadius="10" BorderThickness="0" Padding="2,1" Margin="0,0,0,-9">
+                                <Border.Background>
+                                    <SolidColorBrush Opacity="{Binding AppConfig.IndividualMessageBackgroundOpacity}" Color="#303030"/>
+                                </Border.Background>
                                 <TextBlock Focusable="False" TextAlignment="Justify" Margin="1,1,1,1" TextWrapping="Wrap" FontSize="14" Foreground="#FFCDCDCD" Interactivity:TextBlockAttached.InlineList="{Binding Message, Converter={StaticResource ResourceKey=textConverter}}"  UseLayoutRounding="True">
+
                                 </TextBlock>
-                            </Border>
+                            </Border>                            
                         </Grid>
                     </Border>
                 </ControlTemplate>
