--- a/Ubiquitous2/View/MusicTickerWindow.xaml
+++ b/Ubiquitous2/View/MusicTickerWindow.xaml
@@ -14,9 +14,9 @@
         xmlns:UBModel="clr-namespace:UB.Model"
         xmlns:ComponentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         WindowStyle="None"
-        AllowsTransparency="False"        
+        AllowsTransparency="True"        
+        Background="Transparent"
         ResizeMode="NoResize"
-        Background="#FF3E3E42"
         Title="Music ticker"
         Topmost="True"
         UseLayoutRounding="True"
@@ -24,6 +24,8 @@
         DataContext="{Binding Source={StaticResource Locator},Path=MusicTicker}" 
         Visibility="{Binding Source={StaticResource Locator},Path=MusicTicker.Config.Enabled, Converter={StaticResource boolToVisibilityConverter}}"
         HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0" Foreground="#FFDEDEDE" Width="300" Height="56" d:DesignHeight="84.186">
+
+    
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter"></BooleanToVisibilityConverter>
@@ -34,22 +36,26 @@
     </i:Interaction.Behaviors>
 
     <Grid>
+        <i:Interaction.Behaviors>
+            <Interactivity:ElementToPng FileName="{Binding MusicTickerToImagePath}" DelayBefore="600" SaveOnDemand="True" SaveFlag="{Binding IsNeedSave}"/>
+        </i:Interaction.Behaviors>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="64"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FF343434" Offset="0"/>
-                <GradientStop Color="#FF1D1D1D" Offset="1"/>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0" Opacity="{Binding AppConfig.MusicTickerBackgroundOpacity}">
+                <GradientStop Color="#343434" Offset="0"/>
+                <GradientStop Color="#1D1D1D" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
         <DockPanel Grid.Column="0" Background="#FF252525">
             <Image Source="{Binding CurrentTrack.ImageURL}"  HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </DockPanel>
-        <Rectangle>
+        <Rectangle >
             <Rectangle.Fill>
-                <RadialGradientBrush Center="0.5,-0.5" RadiusX="1.2" RadiusY="1.2" GradientOrigin="0,0">
+                <RadialGradientBrush Center="0.5,-0.5" RadiusX="1.2" RadiusY="1.2" GradientOrigin="0,0" >
                     <GradientStop Color="#70000000" Offset="1"/>
                     <GradientStop Color="#1CB0B0B0"/>
                     <GradientStop Color="#41606060" Offset="0.537"/>
